--- a/config/data_config.yaml
+++ b/config/data_config.yaml
@@ -4,18 +4,18 @@ data_loading:
   time_column_index: null
   time: 1.0e-2
   control_input_column_indices: [2]
-  plot_data: True
-  perturb_input_signal: False
+  plot_data: False
   verbose: True
 
 data_splitting:
   train_ratio: 0.5
   val_ratio: 0.25
   apply_savgol_filter: False
-  plot_data: False
+  plot_data: True
+  perturb_input_signal: True
   verbose: True
 
 data_preprocessing:
   savgol_window_length: 21
   savgol_polyorder: 2
-
+  perturb_ratio: 1.0e-2
