Zmeny v config a make_grid

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -3,7 +3,7 @@ paths:
   data_processed_dir: data/processed
   data_export_dir: data/reports
 
-defaults:
+valid_methods:
   # Default parameters for SINDy differentiation methods
   differentiation_methods:
     FiniteDifference:
@@ -81,9 +81,9 @@ defaults:
     min_r2: 0.7
     max_state: 1000
 
-  constants:
-    values:
-      minimal_noise_value: 1.0e-3
-    SINDYEstimator:
-      min_validation_sim_steps: 20 # Minimum steps for quick validation check
-      random_seed: 42
+constants:
+  values:
+    minimal_noise_value: 1.0e-3
+  SINDYEstimator:
+    min_validation_sim_steps: 20 # Minimum steps for quick validation check
+    random_seed: 42 # Default random seed per cofiguration, than, while run_config + index of config is adding
