--- a/config/sindy_params.yaml
+++ b/config/sindy_params.yaml
@@ -1,26 +1,28 @@
+global:
+  random_seed: 42
+
 data_loading:
   file_name: Aeroshield_with_deriv
   state_column_indices: [0, 1]
   time_column_index: null
   time: 1.0e-2
   control_input_column_indices: [2]
+  apply_savgol_filter: False
+  savgol_window_length: 21
+  savgol_polyorder: 2
   plot_data: False
   verbose: True
 
 data_splitting:
   train_ratio: 0.5
   val_ratio: 0.25
-  apply_savgol_filter: False
-  savgol_window_length: 21
-  savgol_polyorder: 2
   perturb_input_signal_ratio: 1.0e-1
-  plot_data: False
+  plot_data: True
   verbose: True
 
 data_preprocessing:
   num_samples_per_trajectory: 0.6 # Ratio of training data used for trajectories generation
   num_trajectories: 5
-  randomseed: 42
 
 params_search:
   n_processes: 6
@@ -31,6 +33,6 @@ constraints:
   sim_steps: 350
   coeff_precision: null
   max_complexity: 20
-  max_coeff: 100
-  min_r2: 0.6
+  max_coeff: 10000
+  min_r2: 0.4
   max_state: 3.0
